app_controllers/infrastructure/kubernetes-deployments/services/nginx-modsecurity/02_us-west1-a-nginx-modsecurity-charles-service.yml

apiVersion: v1
kind: Service
metadata:
  name: nginx-modsecurity-charles
spec:
  selector:
    app: nginx-modsecurity-charles
  ports:
  - name: http
    targetPort: 80
    port: 80
  - name: cloudcmd
    targetPort: 9000
    port: 9000
