app_controllers/infrastructure/kubernetes-deployments/services/nginx-modsecurity/03_us-west1-a-nginx-modsecurity-charles-ingress.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-modsecurity-charles
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: nginx-modsecurity-charles.us-west1-a.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-modsecurity-charles
          servicePort: http
  - host: nginx-modsecurity-charles-cloudcmd.us-west1-a.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-modsecurity-charles
          servicePort: cloudcmd
